Sidebar alignment fix

--- a/src/components/UserDashboard/Sidebar/Sidebar.css
+++ b/src/components/UserDashboard/Sidebar/Sidebar.css
@@ -3,7 +3,8 @@
   background-color: #277761;
   border-radius: 0px 4px 4px 0px;
   color: #f3f7f6;
-  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 .toggleContainer {
   display: flex;
@@ -44,8 +45,7 @@
   display: flex;
   flex-direction: column;
   padding: 10px 10px;
-  min-height: 82vh;
-  max-height: 100%;
+  flex: 1;
 }
 .selection {
   margin-top: 13px;
